src/z80asm/z80asm2/t/20-preproc/expected/defvars_03.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/defvars_03.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/20-preproc/input/defvars_03.asm...
t/20-preproc/input/defvars_03.asm:2:1: error: Missing '{' in DEFVARS directive
    hello
    ^
# file: t/20-preproc/input/defvars_03.asm
EndOfLine	"\n"	3:1	
symbol	__CPU_Z80__	1	(defined at )
symbol	__CPU_ZILOG__	1	(defined at )
symbol	__FLOAT_GENMATH__	1	(defined at )
